IslandGeneration/log
In file included from /usr/local/include/CGAL/user_classes.h:29:0,
                 from /usr/local/include/CGAL/Kernel/global_functions_2.h:33,
                 from /usr/local/include/CGAL/Kernel/global_functions.h:31,
                 from /usr/local/include/CGAL/Cartesian/Cartesian_base.h:30,
                 from /usr/local/include/CGAL/Simple_cartesian.h:28,
                 from /usr/local/include/CGAL/Exact_predicates_inexact_constructions_kernel.h:28,
                 from Voronoi.cpp:16:
/usr/local/include/CGAL/Point_2.h: In instantiation of ‘CGAL::Point_2<R_>::Point_2(const T1&, const T2&) [with T1 = float*; T2 = float*; R_ = CGAL::Epick]’:
Voronoi.cpp:44:42:   required from here
/usr/local/include/CGAL/Point_2.h:81:66: error: no match for call to ‘(CGAL::Cartesian_base_no_ref_count<double, CGAL::Epick>::Construct_point_2 {aka CGAL::CartesianKernelFunctors::Construct_point_2<CGAL::Epick>}) (CGAL::Return_base_tag, float* const&, float* const&)’
     : Rep(typename R::Construct_point_2()(Return_base_tag(), x, y))
                                                                  ^
In file included from /usr/local/include/CGAL/Cartesian/Cartesian_base.h:68:0,
                 from /usr/local/include/CGAL/Simple_cartesian.h:28,
                 from /usr/local/include/CGAL/Exact_predicates_inexact_constructions_kernel.h:28,
                 from Voronoi.cpp:16:
/usr/local/include/CGAL/Cartesian/function_objects.h:2848:9: note: candidates are:
   class Construct_point_2
         ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2858:5: note: CGAL::CartesianKernelFunctors::Construct_point_2<K>::Rep CGAL::CartesianKernelFunctors::Construct_point_2<K>::operator()(CGAL::Return_base_tag, CGAL::Origin) const [with K = CGAL::Epick; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Rep = CGAL::PointC2<CGAL::Epick>]
     operator()(Return_base_tag, Origin o) const
     ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2858:5: note:   candidate expects 2 arguments, 3 provided
/usr/local/include/CGAL/Cartesian/function_objects.h:2862:5: note: CGAL::CartesianKernelFunctors::Construct_point_2<K>::Rep CGAL::CartesianKernelFunctors::Construct_point_2<K>::operator()(CGAL::Return_base_tag, const RT&, const RT&) const [with K = CGAL::Epick; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Rep = CGAL::PointC2<CGAL::Epick>; CGAL::CartesianKernelFunctors::Construct_point_2<K>::RT = double]
     operator()(Return_base_tag, const RT& x, const RT& y) const
     ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2862:5: note:   no known conversion for argument 2 from ‘float* const’ to ‘const RT& {aka const double&}’
/usr/local/include/CGAL/Cartesian/function_objects.h:2866:5: note: CGAL::CartesianKernelFunctors::Construct_point_2<K>::Rep CGAL::CartesianKernelFunctors::Construct_point_2<K>::operator()(CGAL::Return_base_tag, const RT&, const RT&, const RT&) const [with K = CGAL::Epick; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Rep = CGAL::PointC2<CGAL::Epick>; CGAL::CartesianKernelFunctors::Construct_point_2<K>::RT = double]
     operator()(Return_base_tag, const RT& x, const RT& y, const RT& w) const
     ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2866:5: note:   candidate expects 4 arguments, 3 provided
/usr/local/include/CGAL/Cartesian/function_objects.h:2870:5: note: CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 CGAL::CartesianKernelFunctors::Construct_point_2<K>::operator()(const Line_2&) const [with K = CGAL::Epick; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 = CGAL::Point_2<CGAL::Epick>; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Line_2 = CGAL::Line_2<CGAL::Epick>]
     operator()(const Line_2& l) const
     ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2870:5: note:   candidate expects 1 argument, 3 provided
/usr/local/include/CGAL/Cartesian/function_objects.h:2879:5: note: CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 CGAL::CartesianKernelFunctors::Construct_point_2<K>::operator()(const Line_2&, int) const [with K = CGAL::Epick; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 = CGAL::Point_2<CGAL::Epick>; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Line_2 = CGAL::Line_2<CGAL::Epick>]
     operator()(const Line_2& l, int i) const
     ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2879:5: note:   candidate expects 2 arguments, 3 provided
/usr/local/include/CGAL/Cartesian/function_objects.h:2889:5: note: CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 CGAL::CartesianKernelFunctors::Construct_point_2<K>::operator()(CGAL::Origin) const [with K = CGAL::Epick; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 = CGAL::Point_2<CGAL::Epick>]
     operator()(Origin o) const
     ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2889:5: note:   candidate expects 1 argument, 3 provided
/usr/local/include/CGAL/Cartesian/function_objects.h:2893:5: note: CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 CGAL::CartesianKernelFunctors::Construct_point_2<K>::operator()(const RT&, const RT&) const [with K = CGAL::Epick; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 = CGAL::Point_2<CGAL::Epick>; CGAL::CartesianKernelFunctors::Construct_point_2<K>::RT = double]
     operator()(const RT& x, const RT& y) const
     ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2893:5: note:   candidate expects 2 arguments, 3 provided
/usr/local/include/CGAL/Cartesian/function_objects.h:2897:5: note: CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 CGAL::CartesianKernelFunctors::Construct_point_2<K>::operator()(const RT&, const RT&, const RT&) const [with K = CGAL::Epick; CGAL::CartesianKernelFunctors::Construct_point_2<K>::Point_2 = CGAL::Point_2<CGAL::Epick>; CGAL::CartesianKernelFunctors::Construct_point_2<K>::RT = double]
     operator()(const RT& x, const RT& y, const RT& w) const
     ^
/usr/local/include/CGAL/Cartesian/function_objects.h:2897:5: note:   no known conversion for argument 1 from ‘CGAL::Return_base_tag’ to ‘const RT& {aka const double&}’
